CXDEVII-1834: Fix alignment issue. Empty content added with :before now has a forced width of 0.

--- a/aegon-sass-library/base/_icon.scss
+++ b/aegon-sass-library/base/_icon.scss
@@ -206,4 +206,6 @@ a.menu-5662:before {
 // TODO: Refactor menu's in Drupal module 'aegon_menu' to adapt to ATDL.
 .submenu [class*="menu-"][class*="icon-"]:before {
   content: '';
+  display: block;
+  width: 0;
 }
